Added dummy assignment to website

--- a/assignments.html
+++ b/assignments.html
@@ -10,9 +10,9 @@
     <div>
         <h2>Assignment 0</h2>
         <p>
-            Creating a personal website using HTML and CSS for CS506 that will be used and updated throughout the semester with new assignments and projects.
+            Python script that adds two numbers together and prints their sum to the command line.
         </p>
-        <a href="https://github.com/444caro/444caro.github.io">GitHub Link</a>
+        <a href="https://github.com/444caro/cjm72-assignment-0">GitHub Link</a>
     </div>
     <nav>
         <ul>
