--- a/assignments.html
+++ b/assignments.html
@@ -14,6 +14,13 @@
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-0">GitHub Link</a>
     </div>
+        <div>
+        <h2>Assignment 1</h2>
+        <p>
+            Analyzes data on the elevator arrival frequencies of the CDS elevators. Using this data, the optimal place to stand to minimize walking distance is calculated. 
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-1">GitHub Link</a>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
