--- a/assignments.html
+++ b/assignments.html
@@ -21,6 +21,13 @@
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-1">GitHub Link</a>
     </div>
+    <div>
+        <h2>Assignment 2</h2>
+        <p>
+          Interactive web application that demonstrates the KMeans clustering algorithm using various initialization methods and allows for the exploration of the impact of different initialization strategies on the clustering outcome. 
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-2">GitHub Link</a>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
