--- a/assignments.html
+++ b/assignments.html
@@ -28,6 +28,13 @@
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-2">GitHub Link</a>
     </div>
+    <div>
+        <h2>Assignment 3</h2>
+        <p>
+          IPYND that applies a Singular Value Decomposition (SVD) implementation as a preprocessing step to the MNIST dataset and trains a logistic regression classifier. Model performance and training time when using different levels of SVD for dimensionality reduction is analyzed.
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-3">GitHub Link</a>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
