--- a/assignments.html
+++ b/assignments.html
@@ -31,7 +31,7 @@
     <div>
         <h2>Assignment 3</h2>
         <p>
-          IPYND that applies a Singular Value Decomposition (SVD) implementation as a preprocessing step to the MNIST dataset and trains a logistic regression classifier. Model performance and training time when using different levels of SVD for dimensionality reduction is analyzed.
+          IPYNB that applies a Singular Value Decomposition (SVD) implementation as a preprocessing step to the MNIST dataset and trains a logistic regression classifier. Model performance and training time when using different levels of SVD for dimensionality reduction is analyzed.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-3">GitHub Link</a>
     </div>
