--- a/assignments.html
+++ b/assignments.html
@@ -35,6 +35,14 @@
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-3">GitHub Link</a>
     </div>
+    <div>
+        <h2>Assignment 4</h2>
+        <p>
+        Interactive webpage where users can type queries and retrieve documents from a predefined dataset. The task involves applying LSA to reduce the dimensionality of the document-term matrix and using cosine similarity to measure the relevance of documents to the user’s query.
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-3">GitHub Link</a>
+        <a href="https://youtu.be/dqPFtbdUkR4">Demo Video</a>    
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
