--- a/assignments.html
+++ b/assignments.html
@@ -40,8 +40,15 @@
         <p>
         Interactive webpage where users can type queries and retrieve documents from a predefined dataset. The task involves applying LSA to reduce the dimensionality of the document-term matrix and using cosine similarity to measure the relevance of documents to the user’s query.
         </p>
-        <a href="https://github.com/444caro/cjm72-assignment-3">GitHub Link</a>
+        <a href="https://github.com/444caro/cjm72-assignment-4">GitHub Link</a>
         <a href="https://youtu.be/dqPFtbdUkR4">Demo Video</a>    
+    </div>
+    <div>
+        <h2>Assignment 5</h2>
+        <p>
+            Given a dataset containing information about customers, such as their demographics, account balance, and salary, I built a model to predict whether a customer will churn (i.e., leave the bank) using the K-Nearest Neighbors (KNN) algorithm. Retaining customers is often more cost-effective than acquiring new ones and by accurately predicting which customers are likely to churn, banks can take proactive steps to improve customer retention.
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-5">GitHub Link</a>
     </div>
     <nav>
         <ul>
