--- a/assignments.html
+++ b/assignments.html
@@ -50,6 +50,14 @@
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-5">GitHub Link</a>
     </div>
+    <div>
+        <h2>Midterm Competition Assignment</h2>
+        <p>
+            Given 1,697,533 unique reviews from Amazon Movie Reviews, with their associated star ratings and metadata, predict the star rating associated with user reviews from Amazon Movie Reviews from test.csv using the available features.
+        </p>
+        <a href="https://github.com/444caro/MidtermProject">GitHub Link</a>
+    </div>
+    
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
