--- a/assignments.html
+++ b/assignments.html
@@ -57,6 +57,14 @@
         </p>
         <a href="https://github.com/444caro/CS506-Midterm">GitHub Link</a>
     </div>
+    <div>
+        <h2>Assignment 6</h2>
+        <p>
+            An interactive webpage explores the impact of changing parameters on linear regression, especially when there is no actual relationship between X and Y. By tweaking the settings, one can observe how randomness can influence the slope and intercept in a regression model.
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-6">GitHub Link</a>
+        <a href="https://youtu.be/dqPFtbdUkR4">Demo Video</a>    
+    </div>
     
     <nav>
         <ul>
