--- a/assignments.html
+++ b/assignments.html
@@ -60,7 +60,7 @@
     <div>
         <h2>Assignment 6</h2>
         <p>
-            An interactive webpage explores the impact of changing parameters on linear regression, especially when there is no actual relationship between X and Y. By tweaking the settings, one can observe how randomness can influence the slope and intercept in a regression model.
+            An interactive webpage that explores the impact of changing parameters on linear regression, especially when there is no actual relationship between X and Y. By tweaking the settings, one can observe how randomness can influence the slope and intercept in a regression model.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-6">GitHub Link</a>
         <a href="https://youtu.be/dqPFtbdUkR4">Demo Video</a>    
