--- a/assignments.html
+++ b/assignments.html
@@ -63,7 +63,7 @@
             An interactive webpage that explores the impact of changing parameters on linear regression, especially when there is no actual relationship between X and Y. By tweaking the settings, one can observe how randomness can influence the slope and intercept in a regression model.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-6">GitHub Link</a>
-        <a href="https://youtu.be/dqPFtbdUkR4">Demo Video</a>    
+        <a href="https://youtu.be/n-hSiyjRmUA">Demo Video</a>    
     </div>
     
     <nav>
