--- a/assignments.html
+++ b/assignments.html
@@ -65,13 +65,21 @@
         <a href="https://github.com/444caro/cjm72-assignment-6">GitHub Link</a>
         <a href="https://youtu.be/n-hSiyjRmUA">Demo Video</a>    
     </div>
-        <div>
+    <div>
         <h2>Assignment 7</h2>
         <p>
             An extended version of the interactive webpage created in assignment 7. It explores the impact of changing parameters on linear regression, especially when there is no actual relationship between X and Y. By tweaking the settings, one can observe how randomness can influence the slope and intercept in a regression model. Now including hypothesis testing and confidence intervals.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-7">GitHub Link</a>
         <a href="https://youtu.be/z8muJGWFPWE">Demo Video</a>    
+    </div>
+    <div>
+        <h2>Assignment 8</h2>
+        <p>
+             Web application that explores the effect of shifting clusters in a dataset on the parameters of a logistic regression model.
+        </p>
+        <a href="https://github.com/444caro/cjm72-assignment-8">GitHub Link</a>
+        <a href="https://youtu.be/n-hSiyjRmUA">Demo Video</a>    
     </div>
     
     <nav>
