--- a/assignments.html
+++ b/assignments.html
@@ -79,7 +79,7 @@
              Web application that explores the effect of shifting clusters in a dataset on the parameters of a logistic regression model.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-8">GitHub Link</a>
-        <a href="https://youtu.be/n-hSiyjRmUA">Demo Video</a>    
+        <a href="https://youtu.be/Tt7CFEYBgYE">Demo Video</a>    
     </div>
     
     <nav>
