--- a/assignments.html
+++ b/assignments.html
@@ -84,10 +84,10 @@
     <div>
         <h2>Assignment 9</h2>
         <p>
-             Web application 
+             Web application that allows for the analysis of a simple neural network by visualizing its learned features, decision boundary, and gradients.
         </p>
         <a href="https://github.com/444caro/cjm72-assignment-9">GitHub Link</a>
-        <a href="https://youtu.be/Tt7CFEYBgYE">Demo Video</a>    
+        <a href="https://youtu.be/6nWyvj_MBbU">Demo Video</a>    
     </div>
     
     <nav>
